--- a/.gitignore
+++ b/.gitignore
@@ -43,9 +43,16 @@ replay_pid*
 *.zip
 *.tar.gz
 *.rar
+*.txt
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
 .idea
 .gradle
+
+/*/build/
+axon-server-se/*/*
+demo-pay/db/*
+demo-pay/membership-service/build/
+demo-pay/common/build/
